--- a/portfolio.css
+++ b/portfolio.css
@@ -19,7 +19,7 @@ body#portfolio {
         text-decoration: underline; }
       body#portfolio main > ol > li:nth-child(even):not(.half) {
         background-color: #222; }
-      body#portfolio main > ol > li#week2, body#portfolio main > ol > li#week3-1, body#portfolio main > ol > li#week3-2, body#portfolio main > ol > li#week4, body#portfolio main > ol > li#week8, body#portfolio main > ol > li#week9, body#portfolio main > ol > li#week10, body#portfolio main > ol > li#week11, body#portfolio main > ol > li.half {
+      body#portfolio main > ol > li#week1, body#portfolio main > ol > li#week2, body#portfolio main > ol > li#week3-1, body#portfolio main > ol > li#week4, body#portfolio main > ol > li#week8, body#portfolio main > ol > li#week9, body#portfolio main > ol > li#week10, body#portfolio main > ol > li#week11, body#portfolio main > ol > li.half {
         background: #333;
         display: inline-block;
         width: 43%;
@@ -27,18 +27,18 @@ body#portfolio {
         margin-top: 2em;
         margin-bottom: 2em;
         border-radius: 30px; }
-        body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li#week3-1 + .half, body#portfolio main > ol > li#week3-2 + .half, body#portfolio main > ol > li#week4 + .half, body#portfolio main > ol > li#week8 + .half, body#portfolio main > ol > li#week9 + .half, body#portfolio main > ol > li#week10 + .half, body#portfolio main > ol > li#week11 + .half, body#portfolio main > ol > li.half + .half {
+        body#portfolio main > ol > li#week1 + .half, body#portfolio main > ol > li#week2 + .half, body#portfolio main > ol > li#week3-1 + .half, body#portfolio main > ol > li#week4 + .half, body#portfolio main > ol > li#week8 + .half, body#portfolio main > ol > li#week9 + .half, body#portfolio main > ol > li#week10 + .half, body#portfolio main > ol > li#week11 + .half, body#portfolio main > ol > li.half + .half {
           border-right-width: 0; }
-        body#portfolio main > ol > li#week2 .vega-canvas, body#portfolio main > ol > li#week3-1 .vega-canvas, body#portfolio main > ol > li#week3-2 .vega-canvas, body#portfolio main > ol > li#week4 .vega-canvas, body#portfolio main > ol > li#week8 .vega-canvas, body#portfolio main > ol > li#week9 .vega-canvas, body#portfolio main > ol > li#week10 .vega-canvas, body#portfolio main > ol > li#week11 .vega-canvas, body#portfolio main > ol > li.half .vega-canvas {
+        body#portfolio main > ol > li#week1 .vega-canvas, body#portfolio main > ol > li#week2 .vega-canvas, body#portfolio main > ol > li#week3-1 .vega-canvas, body#portfolio main > ol > li#week4 .vega-canvas, body#portfolio main > ol > li#week8 .vega-canvas, body#portfolio main > ol > li#week9 .vega-canvas, body#portfolio main > ol > li#week10 .vega-canvas, body#portfolio main > ol > li#week11 .vega-canvas, body#portfolio main > ol > li.half .vega-canvas {
           border: 1px solid #aaa;
           background: #282828; }
-        body#portfolio main > ol > li#week2 figure, body#portfolio main > ol > li#week3-1 figure, body#portfolio main > ol > li#week3-2 figure, body#portfolio main > ol > li#week4 figure, body#portfolio main > ol > li#week8 figure, body#portfolio main > ol > li#week9 figure, body#portfolio main > ol > li#week10 figure, body#portfolio main > ol > li#week11 figure, body#portfolio main > ol > li.half figure {
+        body#portfolio main > ol > li#week1 figure, body#portfolio main > ol > li#week2 figure, body#portfolio main > ol > li#week3-1 figure, body#portfolio main > ol > li#week4 figure, body#portfolio main > ol > li#week8 figure, body#portfolio main > ol > li#week9 figure, body#portfolio main > ol > li#week10 figure, body#portfolio main > ol > li#week11 figure, body#portfolio main > ol > li.half figure {
           padding-left: 0.5em;
           padding-right: 0.5em;
           padding-bottom: 1em;
           padding-top: 0.5em;
           text-align: center; }
-          body#portfolio main > ol > li#week2 figure img, body#portfolio main > ol > li#week3-1 figure img, body#portfolio main > ol > li#week3-2 figure img, body#portfolio main > ol > li#week4 figure img, body#portfolio main > ol > li#week8 figure img, body#portfolio main > ol > li#week9 figure img, body#portfolio main > ol > li#week10 figure img, body#portfolio main > ol > li#week11 figure img, body#portfolio main > ol > li.half figure img {
+          body#portfolio main > ol > li#week1 figure img, body#portfolio main > ol > li#week2 figure img, body#portfolio main > ol > li#week3-1 figure img, body#portfolio main > ol > li#week4 figure img, body#portfolio main > ol > li#week8 figure img, body#portfolio main > ol > li#week9 figure img, body#portfolio main > ol > li#week10 figure img, body#portfolio main > ol > li#week11 figure img, body#portfolio main > ol > li.half figure img {
             margin-bottom: 1em; }
       body#portfolio main > ol > li.figure {
         text-align: center; }
@@ -48,6 +48,12 @@ body#portfolio {
           background: #444; }
         body#portfolio main > ol > li table th {
           background: #3a3a3a; }
+      body#portfolio main > ol > li#week3-2 {
+        text-align: center; }
+        body#portfolio main > ol > li#week3-2 .vega-container {
+          width: 100%;
+          max-width: 800px;
+          margin: auto; }
       body#portfolio main > ol > li#week5, body#portfolio main > ol > li#week7 {
         text-align: center; }
         body#portfolio main > ol > li#week5 div.vega-containers, body#portfolio main > ol > li#week7 div.vega-containers {
@@ -64,7 +70,7 @@ body#portfolio {
         border: 1px solid #888; }
 
 @media only screen and (max-width: 1200px) {
-  body#portfolio main > ol li#week2, body#portfolio main > ol li#week3-1, body#portfolio main > ol li#week3-2, body#portfolio main > ol li#week4, body#portfolio main > ol li#week8, body#portfolio main > ol li#week9, body#portfolio main > ol li#week10, body#portfolio main > ol li#week11, body#portfolio main > ol li.half {
+  body#portfolio main > ol li#week1, body#portfolio main > ol li#week2, body#portfolio main > ol li#week3-2, body#portfolio main > ol li#week4, body#portfolio main > ol li#week8, body#portfolio main > ol li#week9, body#portfolio main > ol li#week10, body#portfolio main > ol li#week11, body#portfolio main > ol li.half {
     width: 100%;
     border-radius: 0;
     margin-top: 0;
