--- a/portfolio.scss
+++ b/portfolio.scss
@@ -122,7 +122,7 @@ body#portfolio {
           padding-bottom:2em;
           border-bottom:1px solid #888;
         }
-        &#week3-1,
+        &#week2,
         &#week4,
         &#week8,
         &#week10 {
