--- a/portfolio.scss
+++ b/portfolio.scss
@@ -104,6 +104,7 @@ body#portfolio {
           max-width:700px;
           text-align:center;
           margin-left:auto;
+          margin-right:auto;
         }
       }
       &#week5, &#week7 {
