--- a/project.scss
+++ b/project.scss
@@ -28,6 +28,14 @@ body#project {
                 color:#fff;
             }
         }
+        div.story {
+            border:1px dashed #aaa;
+            padding:1em 2em;
+            margin:3em auto 5em;
+            text-align:center;
+            background:#555;
+            max-width:600px;
+        }
     }
 }
 @media only screen and (max-width: 1200px) {
